--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,11 +58,16 @@ body {
 
 .home {
   position: relative;
+
+  &_contact {
+    margin: 30px 0px;
+    text-align: center;
+  }
 }
 
 .home-image {
   @extend %centered;
-  width: 50vw;
+  width: 45vh;
   margin-top: 3%;
   margin-bottom: 5%;
   border: 3px solid $dark;
@@ -117,6 +122,12 @@ body {
   &--wide {
     width: 13%;
   }
+  &--sorta-slim {
+    width: 6.5%;
+  }
+  &--slim {
+    width: 5%;
+  }
 }
 
 .subscribe-form {
@@ -165,6 +176,15 @@ h2.notice {
 
   .home-image, .regular-image {
     width: 70vw;
+  }
+
+  .icon {
+    &--sorta-slim {
+      width: 13%;
+    }
+    &--slim {
+      width: 10%;
+    }
   }
 }
 
