--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,6 +16,6 @@
     <% end %>
   </div>
   <div class="home">
-    <%= image_tag "misty_eric_1.jpeg", class: "home-image" %>
+    <%= image_tag "misty_eric_1.jpg", class: "home-image" %>
   </div>
 <% end %>
