--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-93730623-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-56PY5J961G"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-93730623-2');
+      gtag('config', 'G-56PY5J961G');
     </script>
 
     <title><%= yield(:title) %></title>
